[tool.poetry]
name = "pickup_delivery"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.1"
pytest = "^6.2.2"
fastapi = "^0.63.0"
ortools = "^8.1.8487"
pydantic = "^1.7.3"
httpx = "^0.16.1"
asgi-lifespan = "^1.0.1"
asyncio = "^3.4.3"
uvicorn = "^0.13.3"
requests = "^2.25.1"
gunicorn = "^20.0.4"
setuptools = "^53.0.0"
uvloop = "^0.15.1"
httptools = "^0.1.1"


[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0", "cryptography<3"]
build-backend = "poetry.core.masonry.api"
